--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 	<meta content="IE=8" http-equiv="X-UA-Compatible">
 	<link href="https://e-learning.lhu.edu.tw/base/10001/door/tpl/icon.ico" rel="icon">
 	<title>ITS Python必殺題庫76題</title>
-	<link href="./LHU_kill76/view_result_files/wm.css" rel="stylesheet" type="text/css">
+	<link href="./view_result_files/wm.css" rel="stylesheet" type="text/css">
 	<link href="./LHU_kill76/view_result_files/wm(1).css" rel="stylesheet" type="text/css">
 </head>
 <body>
