--- a/index.htm
+++ b/index.htm
@@ -9300,7 +9300,17 @@
 											</table>
 										</blockquote>
 									</td>
-									<td></td>
+									<td>
+										"Tips:"
+										<br>
+										<p>
+											<b>
+											%：取餘數。<br>
+											/：普通除法，返回浮點數結果。<br>
+											//：整數除法，返回整數結果（捨棄小數部分）。
+											</b>
+										</p>
+									</td>
 								</tr>
 								<tr class="bg04 font01 item">
 									<td nowrap valign="top"><img align="top" border="0" src="./view_result73_files/icon_wrong.gif"><br>
